Update ecommerce homepage with latest changes

--- a/index.html
+++ b/index.html
@@ -204,49 +204,38 @@
   </div>
 </section>
 
-  <!-- GIFT NOTES + WINTER -->
+  <!-- GIFT NOTES WINTER -->
 <section class="section" id="gift-notes">
   <header class="section-header center">
     <h2>
-      Make It <span class="accent-italic">Extra Special</span>
-      with Personalised<br />Gift Notes
+      Make It <span class="accent-italic">Extra Special</span> with Personalised<br />
+      Gift Notes
     </h2>
   </header>
 
   <div class="gift-notes-layout">
-    <!-- Left: large portrait image -->
+    <!-- Left large portrait image -->
     <figure class="gift-notes-main">
       <img src="images/gift-main.jpg" alt="Woman wearing layered necklace" />
     </figure>
 
-    <!-- Right: 4 small images with buttons -->
+    <!-- Right 4 small images with buttons -->
     <div class="gift-notes-grid">
       <figure class="gift-note-card">
-        <img src="images/gift.jpg" alt="Hands with ring - under 10000" />
-        <figcaption>
-          <button type="button" class="secondary-btn">Shop Under ₹10000</button>
-        </figcaption>
+        <img src="images/gift.jpg" alt="Hands with ring - under ₹10,000" />
+        <figcaption><button type="button" class="secondary-btn">Shop Under ₹10,000</button></figcaption>
       </figure>
-
       <figure class="gift-note-card">
-        <img src="images/gift.jpg" alt="Hands with ring - under 20000" />
-        <figcaption>
-          <button type="button" class="secondary-btn">Shop Under ₹20000</button>
-        </figcaption>
+        <img src="images/gift.jpg" alt="Hands with ring - under ₹20,000" />
+        <figcaption><button type="button" class="secondary-btn">Shop Under ₹20,000</button></figcaption>
       </figure>
-
       <figure class="gift-note-card">
-        <img src="images/gift.jpg" alt="Hands with ring - under 30000" />
-        <figcaption>
-          <button type="button" class="secondary-btn">Shop Under ₹30000</button>
-        </figcaption>
+        <img src="images/gift.jpg" alt="Hands with ring - under ₹30,000" />
+        <figcaption><button type="button" class="secondary-btn">Shop Under ₹30,000</button></figcaption>
       </figure>
-
       <figure class="gift-note-card">
-        <img src="images/gift.jpg" alt="Hands with ring - E‑Gift cards" />
-        <figcaption>
-          <button type="button" class="secondary-btn">E‑Gift Cards</button>
-        </figcaption>
+        <img src="images/gift.jpg" alt="E-Gift cards presentation" />
+        <figcaption><button type="button" class="secondary-btn">E-Gift Cards</button></figcaption>
       </figure>
     </div>
   </div>
@@ -349,7 +338,7 @@
 </section>
 
   <!-- OCCASIONS -->
-<section class="section" id="gift-notes">
+<section class="section" id="occasions">
   <div class="section-inner">
   <header class="section-header center">
     <h2>
@@ -360,39 +349,39 @@
     </p>
   </header>
 
-  <div class="gift-notes-layout">
+  <div class="occasions-layout">
     <!-- 3 top cards -->
-    <article class="gift-row">
-      <figure class="gift-card">
+    <article class="occasions-row">
+      <figure class="occasions-card">
         <img src="images/birthday.jpg" alt="Birthday jewellery" />
         <figcaption>
           <h3>BIRTHDAY</h3>
           <p>Celebrate their special day with a timeless piece that they can wear every day.</p>
-          <button type="button" class="secondary-btn">Shop Birthday Gifts →</button>
+          <button type="button" class="secondary-btn">Shop Birthday Gifts</button>
         </figcaption>
       </figure>
 
-      <figure class="gift-card">
+      <figure class="occasions-card">
         <img src="images/anniversary.jpg" alt="Anniversary jewellery" />
         <figcaption>
           <h3>ANNIVERSARY</h3>
           <p>Mark your love story with jewellery that symbolises unforgettable moments and devotion.</p>
-          <button type="button" class="secondary-btn">Shop Anniversary Gifts →</button>
+          <button type="button" class="secondary-btn">Shop Anniversary Gifts</button>
         </figcaption>
       </figure>
 
-      <figure class="gift-card">
+      <figure class="occasions-card">
         <img src="images/engagement.jpg" alt="Engagement jewellery" />
         <figcaption>
           <h3>ENGAGEMENT</h3>
           <p>Begin forever with a piece that captures the promise of your beautiful journey.</p>
-          <button type="button" class="secondary-btn">Shop Engagement Gifts →</button>
+          <button type="button" class="secondary-btn">Shop Engagement Gifts</button>
         </figcaption>
       </figure>
     </article>
 
     <!-- bottom wide button -->
-    <div class="gift-cta">
+    <div class="occasions-cta">
       <button type="button" class="primary-btn">
         Explore More Collection →
       </button>
@@ -400,14 +389,14 @@
   </div>
 </section>
 
-  <!-- ETHOS + FUTURE -->
+  <!-- ETHOS -->
  <section class="section two-column" id="ethos">
-  <!-- Left image -->
+  <!-- Image -->
   <figure class="ethos-media">
     <img src="images/ethos-main.jpg" alt="Layered necklaces on model" />
   </figure>
 
-  <!-- Right text -->
+  <!-- Text -->
   <div class="ethos-content">
     <article class="card">
       <h4>OUR ETHOS</h4>
@@ -418,78 +407,31 @@
       </h2>
 
       <p>
-        Every piece we create is a blend of artistry and 
-        awareness handcrafted with precision, guided by 
-        purpose. 
+        Every piece we create is a blend of artistry and
+        awareness handcrafted with precision, guided by
+        purpose.
       </p>
 
       <p>
-        From ethically sourced materials to sustainable 
-        processes, we believe true beauty shines brightest 
-        when it’s made responsibly. 
+        From ethically sourced materials to sustainable
+        processes, we believe true beauty shines brightest
+        when it’s made responsibly.
       </p>
 
       <a class="primary-btn" href="#top">Know More →</a>
     </article>
   </div>
 </section>
-     <!-- Not just a trend section -->
+
+     <!-- FUTURE -->
 <section class="section" id="future">
-  <div class="future-banner">
-    <!-- LEFT: diamond + tweezers image -->
-    <figure class="future-media">
-      <img
-        src="images/future-main.jpg"
-        alt="Diamonds held with tweezers"
-      />
-    </figure>
-
-    <!-- RIGHT: heading, text, 6 icons -->
-    <div class="future-content">
-      <header class="future-header">
-        <h2>
-          Not Just A Trend. It’s<br />
-          <span class="accent-italic">The Future.</span>
-        </h2>
-        <p class="future-text">
-          Our lab-grown gold and silver jewellery is crafted with the same
-          brilliance and purity as mined metals without the compromise.
-        </p>
-      </header>
-
-      <div class="future-icons-grid" aria-label="Benefits">
-        <div class="future-icon">
-          <img src="images/icon-925.png" alt="925 Sterling Silver" />
-          <p>925 Sterling Silver</p>
-        </div>
-
-        <div class="future-icon">
-          <img src="images/icon-diamond.png" alt="Certified Diamonds" />
-          <p>Certified Diamonds</p>
-        </div>
-
-        <div class="future-icon">
-          <img src="images/icon-ethical.png" alt="Ethical Sourcing" />
-          <p>Ethical Sourcing</p>
-        </div>
-
-        <div class="future-icon">
-          <img src="images/icon-return.png" alt="Free 15 Days Return &amp; Exchange" />
-          <p>Free 15 Days<br />Return &amp; Exchange</p>
-        </div>
-
-        <div class="future-icon">
-          <img src="images/icon-custom.png" alt="Customisable Designs" />
-          <p>Customisable<br />Designs</p>
-        </div>
-
-        <div class="future-icon">
-          <img src="images/icon-bis.png" alt="BIS Hallmark" />
-          <p>BIS Hallmark</p>
-        </div>
-      </div>
-    </div>
-  </div>
+  <!-- Image containing all text information -->
+  <figure class="future-media">
+    <img
+      src="images/future-main.jpg"
+      alt="Not Just A Trend. It's The Future. Our lab-grown gold and silver jewellery is crafted with the same brilliance and purity as mined metals without the compromise. Features: 925 Sterling Silver, Certified Diamonds, Ethical Sourcing, Free 15 Days Return & Exchange, Customisable Designs, BIS Hallmark"
+    />
+  </figure>
 </section>
 
   <!-- REVIEWS -->
